# Bangumi-Skill

./: .gitignore  README.md  pyproject.toml  setup.py
bangumi/: __init__.py
bangumi/scripts/: bangumi_crawler.py
